# reddit-discord-feed

./: .gitignore  Cargo.toml  Dockerfile  config-example.toml  config.toml  cronfile  docker-compose.yml
.github/workflows/: build-release.yml
src/: main.rs
