[package]
name = "rss-discord-feed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
futures = "0.3.30"
quick-xml = { version = "0.31.0", features = ["serde", "serialize"] }
reqwest = { version = "0.11.24", features = ["json"] }
serde = "1.0.196"
serde_json = "1.0.113"
tokio = { version = "1.36.0", features = ["full"] }
xml = "0.8.10"
