[package]
name = "reddit-discord-feed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.33"
futures = "0.3.30"
minidom = "0.15.2"
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tokio = { version = "1.36.0", features = ["full"] }
toml = "0.8.10"
toml_edit = "0.22.4"
